minor code improvement